<resources>
    <string name="app_name">LETS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_member_details">My Profile</string>
    <string name="title_activity_list_adverts">Adverts</string>
    <string name="title_activity_test_layout">TestLayout</string>
    <string name="title_activity_advert_details">Advert Details</string>
    <string-array
        name="navigation_array">
        <item>Home</item>
        <item>Profile</item>
        <item>Adverts</item>
        <item>Create Advert</item>
        <item>View Rules</item>
        <item>My Adverts</item>
        <item>My Bids</item>
        <item>My Transactions</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_user_login">Log In</string>
    <string name="title_activity_camera">Photo</string>
    <string name="title_activity_make_offer">Make Offer</string>
    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_my_adverts">My Adverts</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_search_adverts">Search Adverts</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name ="search_label">search</string>
    <string name="title_activity_logout">Log Out</string>
    <string name="title_activity_bids">Bids</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_screen_slider">ScreenSliderActivity</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_main_swipe">MainSwipeActivity</string>
    <string name="title_activity_create_advert_type">Create Advert</string>
    <string name="title_activity_create_advert_item_type">Create Advert</string>
    <string name="title_activity_create_advert_details">Create Advert</string>
    <string name="title_activity_create_advert_details2">Create Advert</string>
    <string name="title_activity_create_advert_image">Create Advert</string>
    <string name="title_activity_create_advert_preview">Advert Preview</string>
    <string name="title_activity_edit_advert">Edit Advert</string>
   <!-- Strings used throughout the application -->
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="make_offer">Make an Offer</string>
    <string name="forename">Forename</string>
    <string name="incoming_bids">Incoming Bids</string>
    <string name="selling">Selling</string>
    <string name="advert_title">Advert Title</string>
    <string name="edit_advert">Edit Advert</string>
    <string name="accepted_bids">Accepted Bids</string>
    <string name="outgoing_bids">Outgoing Bids</string>
    <string name="refused_bids">Refused Bids</string>
    <string name="surname">Surname</string>
    <string name="bought">Bought</string>
    <string name="preview">Preview</string>
    <string name="sold">Sold</string>
    <string name="buying">Buying</string>
    <string name="credits">Credits</string>
    <string name="advert_desc">Advert Description</string>
    <string name="browse_adverts">Browse Adverts</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="offer_text">Please write your offer</string>
    <string name="categories">Categories</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="transport">Transport</string>
    <string name="confirm">Confirm</string>
    <string name="city">City</string>
    <string name="yesno">Yes/No</string>
    <string name="create_advert">Create Advert</string>
    <string name="postcode">Postcode</string>
    <string name="email">Email</string>
    <string name="advert_type">Advert Type</string>
    <string name="item_type">Item_Type</string>
    <string name="contact_number">Contact Number</string>
    <string name="view_bids">View Bids</string>
    <string name="password">Password</string>
    <string name="advert_cost">Advert Cost</string>
    <string name="transaction">Transactions</string>
    <string name="profile">Profile</string>
    <string name="confirm_advert">Confirm Advert</string>
    <string name="make_bid">Make Bid</string>
</resources>
