<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:context="com.richardimms.www.android0303.Activities.AdvertDetailsActivity"
        >
        <TextView
            android:id="@+id/txtAdvertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/imgAdvert"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:paddingBottom="10dp"
            android:layout_below="@+id/txtAdvertTitle"
            android:layout_centerHorizontal="true"
            android:padding="5dp" />

        <TextView
            android:id="@+id/lblAdvertDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advert_desc"
            android:layout_below="@+id/imgAdvert"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescripton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblAdvertDescription"
            android:padding="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:layout_below="@+id/txtDescripton"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAdvertCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescripton"
            android:layout_toRightOf="@+id/lblCategory"
            android:padding="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_type"
            android:layout_below="@id/lblCategory"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblCategory"
            android:layout_toRightOf="@id/lblItemType"
            android:padding="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport"
            android:layout_below="@id/txtItemType"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtItemType"
            android:layout_toRightOf="@id/lblTransport"
            android:padding="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblAdvertType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advert_type"
            android:layout_below="@id/lblTransport"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAdvertType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTransport"
            android:layout_toRightOf="@id/lblAdvertType"
            android:padding="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/lblAdvertCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/advert_cost"
            android:layout_below="@id/txtAdvertType"
            android:padding="5dp"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAdvertCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAdvertType"
            android:layout_toRightOf="@id/lblAdvertCost"
            android:padding="5dp"
            android:textSize="16dp" />
        <Button
            android:id="@+id/btnMakeOffer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/make_bid"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtAdvertCost"

            android:background="@drawable/round_button"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
    </RelativeLayout>
    </ScrollView>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ff90caf9"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:padding="5dp" />
</android.support.v4.widget.DrawerLayout>